# ohos_hilog-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs
tests/: config_log_level.rs  default_init.rs  multiple_init.rs
